--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
         <head>
         <title>Мозг</title>
         <link rel="stylesheet" href="style.css"/>
+                <meta name="google-site-verification" content="AFnzTXod95TaaaysROxN2PIN_3dXmZqbMKiezFFyILg" />
     </head>
     <body>
       
